--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^12.1.2",
+    "@types/lodash": "^4.14.177",
     "@types/node": "16.11.11",
     "@types/react": "17.0.37",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -26,6 +27,7 @@
     "eslint-config-next": "12.0.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.2",
+    "lodash": "^4.17.21",
     "react-test-renderer": "^17.0.2",
     "typescript": "4.5.2"
   }
