--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^2.0.2",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.15.1",
@@ -19,6 +21,7 @@
     "@types/lodash": "^4.14.177",
     "@types/node": "16.11.11",
     "@types/react": "17.0.37",
+    "@types/styled-components": "^5.1.16",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "7",
