--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.2",
     "next": "12.0.4",
+    "path": "^0.12.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "sass": "^1.45.2",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
